@startuml
title Inventory and Item System

left to right direction
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam shadowing false
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam nodesep 35
skinparam ranksep 45

package "Player Side" {
  class PlayerController {
    + OnInteract(context)
    + OnHoldItem(context)
  }

  class RayInteract {
    + searchRadius : float
    + itemLayer : LayerMask
    + FindClosestItem() : Transform
    + PickUp()
  }

  class Inventory {
    + maxItems : int
    + holdingItem : HoldingItem
    + items : List<Item>
    + AddItem(item : Item)
    + RemoveItem(item : Item, dropPosition : Vector2)
  }

  class HoldingItem {
    + DropPosition : GameObject
    - Inventory : Inventory
    + currentItem : GameObject
    + currentIndex : int
    + SetHoldingItem(index : int)
    + HoldItem(value : int)
    + DropCurrentItem()
  }
}

package "Item Data Flow" {
  class ItemPickup {
    + itemData : ItemData
    + Pickup(inventory : Inventory)
  }

  class Item {
    + itemData : ItemData
    + Item(data : ItemData)
  }

  class ItemData {
    + itemName : string
    + itemIcon : Sprite
    + HoldingPrefab : GameObject
    + WorldPrefab : GameObject
  }
}

package "Weapon on Held Prefab" {
  interface IWeapon {
    + OnAttack : event Action
    + ExecuteAttack()
    + SetOwner(owner : GameObject)
  }

  class ProjectileWeapon {
    + ExecuteAttack()
    + SetProjectileTag(tag : string)
    + SetOwner(owner : GameObject)
    + SetMana(mana : Mana)
  }

  class MeleeWeapon {
    + ExecuteAttack()
    + SetOwner(owner : GameObject)
    + EnableHitbox()
    + DisableHitbox()
  }

  class WeaponAnimaion {
    - animator : Animator
    - weapon : IWeapon
  }
}

package "Support" {
  class Mana
  class Animator
  class Transform
}

ProjectileWeapon ..|> IWeapon
MeleeWeapon ..|> IWeapon

PlayerController --> RayInteract : interact input
PlayerController --> HoldingItem : scroll / drop input
RayInteract --> ItemPickup : target item
RayInteract --> Inventory : pass to Pickup()

Inventory --> HoldingItem : auto equip first/current
HoldingItem --> Inventory : browse item slots
Inventory *-- "0..*" Item
Item --> ItemData
ItemPickup --> ItemData : source data
ItemPickup ..> Item : create runtime item
ItemPickup --> Inventory : AddItem(new Item)

HoldingItem --> ItemData : read HoldingPrefab / WorldPrefab
HoldingItem ..> IWeapon : held prefab may contain
WeaponAnimaion --> IWeapon : subscribe OnAttack
WeaponAnimaion --> Animator : trigger "Attack"
ProjectileWeapon --> Mana : consume mana

PlayerController -[hidden]right- RayInteract
RayInteract -[hidden]right- Inventory
Inventory -[hidden]right- HoldingItem
Inventory -[hidden]down- Item
Item -[hidden]right- ItemData
ItemPickup -[hidden]left- Item
HoldingItem -[hidden]down- WeaponAnimaion
WeaponAnimaion -[hidden]left- MeleeWeapon
MeleeWeapon -[hidden]left- ProjectileWeapon

note right of Inventory
Inventory flow:
1. ItemPickup creates Item from ItemData
2. Inventory stores Item in items list
3. If first item, HoldingItem equips immediately
4. If full, current slot can be replaced
end note

note right of HoldingItem
Visual flow:
1. Read current ItemData from Inventory
2. Instantiate HoldingPrefab as held object
3. Drop uses WorldPrefab back into scene
4. Held prefab may include weapon behavior
end note

note bottom of WeaponAnimaion
Held weapon animation is separated from
player body animation.
end note

@enduml
